--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 								<header class="major">
 									<h2><a href="#">Hey, My name is 
 										Dhruvin Shah</a></h2>
-										<p> Product Manager & Content Creator 
-											Currently, I am looking for new grad roles! </p>
+										<p> Product Manager & Content Creator, 
+											Currently I am looking for new grad roles! </p>
 									<p>💡 Strategic Thinking, 📊 Analytical and Data-Driven Decision Making, Problem Solving, and Collaborative: these phrases summarize my ideas in a nutshell. It's in my nature to dive deep into problems and explore them from a user's perspective, all while enjoying the journey. Having worked in Product Management for 2 years, I realized that pursuing a Master's Degree in Management Information Systems is the best choice for me at this juncture.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/Me.jpg" alt="" /></a>
